# pup2

./: README.md
bno055/: setup.py
bno055/bno055/: bno055_subpub.py2
bno055/bno055/params/: bno055_params_i2c.yaml
bno055/bno055/sensor/: SensorService.py.bak
champ/: README.md
champ/champ/include/champ/leg_controller/: leg_controller.h
champ/champ_base/: CMakeLists.txt  CMakeLists.txtold  package.xml
champ/champ_base/action/: LegMoveActions.action
champ/champ_base/include/: quadruped_controller.h
champ/champ_base/src/: leg_move_action_node.cpp  leg_move_node.cpp  quadruped_controller.cpp
champ/champ_config/config/gait/: gait.yaml
champ/champ_msgs/: CMakeLists.txt
champ/champ_msgs/msg/: Transformation.msg
champ_teleop/: champ_teleop.py  champ_teleop.py.original
champ_teleop/launch/: champ_teleop_only.launch.py  teleop.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bno055/lib/bno055/: bno055_subpub
install/bno055/share/bno055/: package.sh
install/bno055/share/bno055/launch/: bno055.launch.py
install/champ/share/champ/: package.sh
install/champ_config/share/champ_config/: local_setup.sh  package.sh
install/champ_description/share/champ_description/: package.sh
install/champ_teleop/lib/champ_teleop/: champ_teleop.py
install/champ_teleop/share/champ_teleop/: package.sh
install/champ_teleop/share/champ_teleop/launch/: .teleop.launch.py.swp  champ_teleop_only.launch.py  teleop.launch.py
install/mini_pupper_2_description/share/mini_pupper_2_description/: local_setup.sh  package.sh
install/mini_pupper_description/share/mini_pupper_description/: local_setup.sh  package.sh
install/mini_pupper_driver/lib/mini_pupper_driver/: battery_status  servo_status
install/mini_pupper_driver/share/mini_pupper_driver/: package.sh
install/mini_pupper_music/share/mini_pupper_music/: package.sh
install/single_leg_actions/share/single_leg_actions/: package.bash  package.zsh
log/: latest_build
mini_pupper_ros/mini_pupper_bringup/launch/: bringup.launch.py  bringup_min.launch.py
mini_pupper_ros/mini_pupper_driver/: setup.py
mini_pupper_ros/mini_pupper_driver/launch/: servo_interface.launch.py
mini_pupper_ros/mini_pupper_driver/mini_pupper_driver/: display_interface.py  display_updater.py
mini_pupper_ros/mini_pupper_interfaces/: package.xml  setup.py
mini_pupper_ros/mini_pupper_interfaces/mini_pupper_interfaces/: display_updater.py
single_leg_actions/: CMakeLists.txt  package.xml
single_leg_actions/include/: bt_action_node.hpp  bt_action_node.hppold
single_leg_actions/src/: behavior_tree_engine.cpp  bt_action_node.cpp  bt_action_node.cppold  bt_node_body_offset.cpp  leg_move_action_node.cpp  leg_move_node.cpp
