<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>single_leg_actions</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chucktaylorsan@gmail.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>action_msgs</build_depend>
  <exec_depend>action_msgs</exec_depend>
  <build_depend>rclcpp_action</build_depend>
  <exec_depend>rclcpp_action</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  
  <build_depend>behaviortree_cpp_v3</build_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>  
  <build_depend>nav2_behavior_tree</build_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <build_depend>action_tutorials_interfaces</build_depend>
  <exec_depend>action_tutorials_interfaces</exec_depend>
<!--<build_depend>nav2_costmap_2d</build_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
-->  

  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
