<?xml version="1.0"?>
<package format="3">
  <name>champ_base</name>
  <version>0.1.0</version>
  <description>CHAMP ROS Hardware and Software Drivers</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>champ</depend>
  <depend>champ_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>  
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>message_filters</depend> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>action_msgs</build_depend>
  <exec_depend>action_msgs</exec_depend>
  <build_depend>rclcpp_action</build_depend>
  <exec_depend>rclcpp_action</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>



  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Declare this package as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
